Adding example form with validation

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
   <link rel="stylesheet" href="assets/icons.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><div class="loading-message" style="text-transform: uppercase;
+    font-weight: 100;
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    padding-top: 25%;">Loading...</div></app-root>
 </body>
 </html>
